WexGit/Wex_DX/force-app/main/default/objects/Community__c/Community__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Name field should be the name of the Site API name.</description>
    <label>Community</label>
</CustomObject>