WexGit/Wex_DX/force-app/main/default/objects/Community__c/fields/Community_Hostname__c.field-meta.xml
<CustomField>
    <fullName>Community_Hostname__c</fullName>
    <description>If you want to use SSL (and you likely do want to use SSL), you will need to include the https:// since the SF URL control will use http:// if it is not specified.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If you want to use SSL (and you likely do want to use SSL), you will need to include the https:// since the SF URL control will use http:// if it is not specified.</inlineHelpText>
    <label>Community Hostname</label>
    <required>true</required>
    <type>Url</type>
</CustomField>