WexGit/Wex_DX/force-app/main/default/objects/Community__c/fields/Component_Width__c.field-meta.xml
<CustomField>
    <fullName>Component_Width__c</fullName>
    <defaultValue>758</defaultValue>
    <description>This is used to dynamically configure the width that is used in numerous portal pages provided by SF.</description>
    <label>Component Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>