WexGit/Wex_DX/force-app/main/default/objects/Community__c/fields/Submit_Form_as_POST__c.field-meta.xml
<CustomField>
    <fullName>Submit_Form_as_POST__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to toggle between submitting as a POST vs. GET. Submitting as a POST is most secure since a GET will pass the username and password values along the query string.</description>
    <label>Submit Form as POST</label>
    <type>Checkbox</type>
</CustomField>