WexGit/Wex_DX/force-app/main/default/objects/Community__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>This field is used to override the Site&apos;s support email rather than to use the Site Contact&apos;s email.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used to override the Site&apos;s support email rather than to use the Site Contact&apos;s email.</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>